--- a/app/globals.css
+++ b/app/globals.css
@@ -1,21 +1,17 @@
+/* /styles/globals.css */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
+/* Custom font and styles */
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  background: linear-gradient(135deg, #3a3a3a, #000000);
+  color: #fff;
+}
+
+.bg-pattern {
+  background-image: url('/path-to-your-pattern-image.svg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
